--- a/vignettes/01_getting_started.Rmd
+++ b/vignettes/01_getting_started.Rmd
@@ -35,8 +35,8 @@ and SeuratData packages if you want to run this vignette against the
 full dataset.
 
 ```{r}
-library("ultragsea")
-library("msigdbr")
+library(ultragsea)
+library(msigdbr)
 gs <- msigdbr::msigdbr(collection = "H")
 gmt <- tapply(gs$gene_symbol,gs$gs_name,list)
 length(gmt)
@@ -56,8 +56,7 @@ head(res)
 
 ```{r}
 #library(fgsea)
-#fgsea::plotEnrichment(gmt[[1]], fc,ticksSize = 0.2)
-#enrichplot::gseaplot2(edo2, geneSetID = 1:3)
+#fgsea::plotEnrichment(gmt[[1]],fc,ticksSize = 0.2)
 ```
 
 
