--- a/vignettes/ultragsea.Rmd
+++ b/vignettes/ultragsea.Rmd
@@ -29,10 +29,7 @@ times faster than fGSEA.
 
 ## Preparing gensets
 
-For this vignette, our package includes a small subset of the the
-pmbc3k single-cell dataset of just 50 cells. Please install the Seurat
-and SeuratData packages if you want to run this vignette against the
-full dataset.
+For this vignette, we retrieve the Hallmark gene sets using the `msigdbr` package. Of course you can use your own gene sets or download from somewhere else.
 
 ```{r}
 library(ultragsea)
@@ -44,6 +41,8 @@ length(gmt)
 
 ## Performing the statistical test
 
+Just for this example we use some random values for `fc` but in general this is a fold change from some statistical comparison of your experiment. 
+
 ```{r}
 G <- gmt2mat(gmt)
 fc <- rnorm(nrow(G))
@@ -53,11 +52,7 @@ res <- ultragsea(fc, G, format='as.gsea', method='ztest')
 head(res)
 ```
 
-For the fastest speed, and especially when computing enrichment for
-multiple foldchanges, it is better to call the low-level functions for
-geneset correlation or geneset z-test directly. They do not return the
-nicely formatted output tables as `ultragsea()` but they are much faster
-as they are optimized for matrix inputs `F`.
+For the fastest speed, especially when computing enrichment for multiple foldchanges, it is better to call the low-level functions for geneset correlation or geneset z-test directly. They do not return the nicely formatted output tables as `ultragsea()` but they are much faster as they are optimized for matrix inputs `F`.
 
 ```{r}
 F <- cbind(fc,fc,fc,fc,fc)
@@ -67,8 +62,7 @@ res2 <- fc_ztest(F, G)
 
 ## Plotting
 
-You can proceed by plotting the gene set using e.g. the plotting
-function of the fgsea package.
+You can proceed by plotting the gene set using e.g. the plotting functions of the fgsea package.
 
 ```{r}
 #library(fgsea)
