--- a/vignettes/ultragsea.Rmd
+++ b/vignettes/ultragsea.Rmd
@@ -20,10 +20,7 @@ knitr::opts_chunk$set(
 
 # Introduction
 
-ultragsea is a novel, ultrafast and memory optimized gene set
-enrichment scoring algorithm not unlike fGSEA. ultragsea demonstrates
-highly correlated gene set scores and p-values and typically is 100
-times faster than fGSEA.
+ultragsea is a novel, ultrafast and memory optimized gene set enrichment scoring algorithm not unlike fGSEA. ultragsea demonstrates highly correlated gene set scores and p-values and typically is 100 times faster than fGSEA.
 
 # Example
 
