--- a/vignettes/benchmark.Rmd
+++ b/vignettes/benchmark.Rmd
@@ -21,6 +21,10 @@ knitr::opts_chunk$set(
 )
 ```
 
+We have evaluated the performance of our method ultragsea using two available benchmark tools for enrichment algorithms: 
+1. GSEABenchmarkeR and 
+2. EAbenchmark. 
+
 
 # GSEABenchmarkeR
 
