--- a/vignettes/benchmark.Rmd
+++ b/vignettes/benchmark.Rmd
@@ -41,14 +41,14 @@ methods through the benchmark:
 
 1. UltraC: ultragsea with correlation test.
 2. UltraZ: ultragsea with z-test.
-3. fastFET: a fast implementation of Fisher Exact test (from the
-   corpora R package) based on the hypergeometric function `phyper`.
+3. fastFET: a fast implementation of Fisher Exact test (from the corpora R package) based on the hypergeometric function `phyper`.
 4. GOAT: see corresponding R package.
 5. cameraPR: preranked camera from the limma R package.
 6. fGSEA: fast GSEA from the `fgsea` R package
+7. Plaid: a single-sample enrichment followed by a t-test.
+8. dual: combination of Plaid and ultraC.
 
-From **Figure 1** we see that ultragsea methods (ultraC and ultraZ)
-are the fastest, about 100 faster than fGSEA. While in **Figure 2** we can see that ultraC also achieves the highest relevance compared to the others.
+From **Figure 1** we see that ultragsea methods (ultraC and ultraZ) are the fastest, about 100 faster than fGSEA. **Figure 2** shows that ultraC also achieves the highest relevance compared to the others.
 
 ![**Figure 1**. Run time of enrichment methods.](fig/benchmark-runtime.png)
 
@@ -73,7 +73,7 @@ EAbenchmark evaluates the false positive rate (FPR) performance of the
 EA methods on randomized data (see **Figure 3**). An ideal method would
 not report any significantly enriched gene sets.
 
-**Figure 4** plot the distribution of p-values of the methods under the
+**Figure 4** plots the distribution of p-values of the methods under the
 null hypothesis. Enrichment analysis methods should produce P-values
 that are uniformly distributed but in practice they are either biased
 toward 0 or 1 or exhibit a bimodal distribution biased toward both
